Hero: Fix correct height of image and prevent overflow

--- a/header.css
+++ b/header.css
@@ -4,6 +4,8 @@
     justify-content: center;
     overflow: hidden;
     position: relative;
+    width: 100vw;
+    max-height: 100vh;
 }
 
 .hero_picture {
@@ -19,24 +21,6 @@
     background: linear-gradient(180deg,rgba(218,147,25,0.2)0%,rgba(218,147,25,0.65)100%);
 }
 
-
-
-.hero_textbox_wrapper {
-    position:absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 0px;
-    top: 60%;
-    left: 50%;
-}
-
-.hero_textbox {
-    display : flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .hero_title {
     font-weight: normal;
     white-space: nowrap;
@@ -44,9 +28,9 @@
     margin: 6px;
     color: var(--color-1);
     position: absolute;
-    top: 60%;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     overflow: visible;
 }
 
